[gd_scene load_steps=6 format=2]

[ext_resource path="res://godot_assets/shaders/pixelate.tres" type="Material" id=1]
[ext_resource path="res://raw_assets/images/plants/fruits/pin-my-apple.svg" type="Texture" id=2]
[ext_resource path="res://src/CloseUpPlant/Fruits/Fruit.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 3 )

[sub_resource type="CircleShape2D" id=3]
radius = 155.081

[node name="Fruit" type="Node2D"]
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="StaticBodyHolder" type="RigidBody2D" parent="."]
position = Vector2( 1, 31 )
collision_layer = 0
collision_mask = 0
mode = 1
sleeping = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBodyHolder"]
position = Vector2( -1, -25 )
shape = SubResource( 2 )

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2( 0, 6 )
node_a = NodePath("../StaticBodyHolder")
node_b = NodePath("../RigidBodyFruit")

[node name="RigidBodyFruit" type="RigidBody2D" parent="."]
position = Vector2( 0, 21 )
collision_layer = 2
collision_mask = 128
mass = 100.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RigidBodyFruit"]
position = Vector2( 12, 226 )
shape = SubResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="RigidBodyFruit"]
material = ExtResource( 1 )
rotation = 0.532325
offset = Vector2( -250, -250 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 31.9999, 0, 672, 0, 672, 640, 32, 640 )
uv = PoolVector2Array( 31.9999, 0, 672, 0, 672, 640, 32, 640 )

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
